# python-template

./: .editorconfig  .gitignore  Pipfile  README.md  pyproject.toml
.github/workflows/: lint.yml  pdoc.yml  test_ci.yml
python_template/: __init__.py  app.py
test/: test_app.py
