[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.78.0"
uvicorn = "^0.18.2"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pdoc = "^12.0.2"
pytest = "^7.1.2"
requests = "^2.28.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
